--- a/css/hangmanstyles.css
+++ b/css/hangmanstyles.css
@@ -71,9 +71,7 @@ body {
 	text-align: center;
 }
 
-
 .starredtext {
-
 	padding: 40px 0;
 	font-weight: 800;
 	text-transform: uppercase;
@@ -83,6 +81,15 @@ body {
 	font-size: 8.5em;
 	min-height: 1.45em;
 	margin-top: 5vh;
+}
+
+.starredtext .text-wrapper {
+  position: relative;
+  display: inline-block;
+  /*padding-top: 0.2em;*/
+  /*padding-right: 0.05em;*/
+  /*padding-bottom: 0.1em;*/
+  /*overflow: hidden;*/
 }
 
 .starredtext .letter {
