--- a/css/hangmanstyles.css
+++ b/css/hangmanstyles.css
@@ -8,8 +8,8 @@ h1.customfont {
 	font-family: "My Custom Font", Verdana, Tahoma;
 	text-align: center;
 	color: #999999;
-	margin-top: 10vh;
-	font-size: 7em;
+	margin-top: 7vh;
+	font-size: 9em;
 	letter-spacing: 0.06em;
 }
 
@@ -103,6 +103,7 @@ body {
 	box-shadow: unset;
 }
 
+
 #inputfield:focus {
 	border-color: #00b10250;
 	border-width: 1px;
@@ -140,15 +141,17 @@ body {
 }
 
 .starredtext {
-	padding: 40px 0;
+
+	padding: 5vh 0 15vh;
 	font-weight: 800;
 	text-transform: uppercase;
 	text-align: center;
 	letter-spacing: 0.3em;
 	color: #999999;
 	font-size: 8.5em;
-	min-height: 1.45em;
-	margin-top: 5vh;
+	height: 1.45em;
+
+	/*margin-top: 1vh;*/
 }
 
 .starredtext .text-wrapper {
@@ -200,13 +203,13 @@ body {
 /*// Extra small devices (portrait phones, less than 576px)*/
 /*// No media query since this is the default in Bootstrap*/
 /*// Extra large devices (large desktops, 1200px and up)*/
-@media (max-width: 1200px) {  }
+@media (max-width: 1200px) { h1.customfont{font-size: 7em} }
 /*// Large devices (desktops, 992px and up)*/
-@media (max-width: 992px) { #ascii {font-size: 0.75em;} .starredtext {font-size: 6em;} #info div {font-size: 1.4em;} #finalmessage {font-size: 3em;} .infosection {font-size: 2.3em;}}
+@media (max-width: 992px) { h1.customfont{font-size: 6.5em } #ascii {font-size: 0.75em;} .starredtext {font-size: 6em;} #info div {font-size: 1.4em;} #finalmessage {font-size: 3em;} .infosection {font-size: 2.3em;}}
 /*// Medium devices (tablets, 768px and up)*/
-@media (max-width: 768px) { #ascii {font-size: 0.55em;} .starredtext {font-size: 5em;} #info div {font-size: 1.2em;}#finalmessage {font-size: 2.5em;} .infosection {font-size: 1.7em;}}
+@media (max-width: 768px) { h1.customfont{font-size: 5.5em } #ascii {font-size: 0.55em;} .starredtext {font-size: 5em;} #info div {font-size: 1.2em;}#finalmessage {font-size: 2.5em;} .infosection {font-size: 1.7em;}}
 /*// Small devices (landscape phones, 576px and up)*/
-@media (max-width: 576px) { #asciiwrap {margin-top: 4vh} #ascii {font-size: 0.37em;} .starredtext {font-size: 3em;} #info div {font-size: 1em;}#finalmessage {font-size: 1.7em;} .infosection {font-size: 1.3em;}}
+@media (max-width: 576px) { h1.customfont{font-size: 4em } #asciiwrap {margin-top: 4vh} #ascii {font-size: 0.37em;} .starredtext {font-size: 3em; height: 0.3vh;} #info div {font-size: 1em; height: 10vh;}#finalmessage {font-size: 1.7em;} .infosection {font-size: 1.3em;}}
 
 
 
