--- a/css/hangmanstyles.css
+++ b/css/hangmanstyles.css
@@ -75,6 +75,15 @@ body {
 
 }
 
+#attemptbar {
+	position: absolute;
+	left: 0;
+	border: 1px solid black;
+	width: 10%;
+	height: 10vh;
+}
+
+
 /*#infomessage {*/
 /*	display: flex;*/
 /*	align-items: center;*/
@@ -209,7 +218,7 @@ body {
 /*// Medium devices (tablets, 768px and up)*/
 @media (max-width: 768px) { h1.customfont{font-size: 5.5em } #ascii {font-size: 0.55em;} .starredtext {font-size: 5em;} #info div {font-size: 1.2em;}#finalmessage {font-size: 2.5em;} .infosection {font-size: 1.7em;}}
 /*// Small devices (landscape phones, 576px and up)*/
-@media (max-width: 576px) { h1.customfont{font-size: 4em } #asciiwrap {margin-top: 4vh} #ascii {font-size: 0.37em;} .starredtext {font-size: 3em; height: 0.3vh;} #info div {font-size: 1em; height: 10vh;}#finalmessage {font-size: 1.7em;} .infosection {font-size: 1.3em;}}
+@media (max-width: 576px) { h1.customfont{font-size: 4em } #asciiwrap {margin-top: 4vh} #ascii {font-size: 0.37em;} .starredtext {font-size: 3em; height: 0.3vh;} #info div {font-size: 1em;}#finalmessage {font-size: 1.7em;} .infosection {font-size: 1.3em;}}
 
 
 
