--- a/css/hangmanstyles.css
+++ b/css/hangmanstyles.css
@@ -5,11 +5,11 @@ body, html, pre, div {
 }
 
 h1.customfont {
-	font-family: "MyCustomFont", Verdana, Tahoma;
+	font-family: "Nosifer", cursive;
 	text-align: center;
 	color: #999999;
 	margin-top: 7vh;
-	font-size: 9em;
+	font-size: 4.5em;
 	letter-spacing: 0.06em;
 }
 
@@ -196,13 +196,13 @@ body {
 /*// Extra small devices (portrait phones, less than 576px)*/
 /*// No media query since this is the default in Bootstrap*/
 /*// Extra large devices (large desktops, 1200px and up)*/
-@media (max-width: 1200px) { h1.customfont{font-size: 7em} }
+@media (max-width: 1200px) { h1.customfont{font-size: 4.5em} }
 /*// Large devices (desktops, 992px and up)*/
-@media (max-width: 992px) { h1.customfont{font-size: 6.5em } #ascii {font-size: 0.75em;} .starredtext {font-size: 4.5em;} #info div {font-size: 1.4em;} #finalmessage {font-size: 3em;} .infosection {font-size: 2.3em;} div#info {height: 13vh; margin:3.5vh auto 5vh;}}
+@media (max-width: 992px) { h1.customfont{font-size: 4.5em } #ascii {font-size: 0.75em;} .starredtext {font-size: 4.5em;} #info div {font-size: 1.4em;} #finalmessage {font-size: 3em;} .infosection {font-size: 2.3em;} div#info {height: 13vh; margin:3.5vh auto 5vh;}}
 /*// Medium devices (tablets, 768px and up)*/
-@media (max-width: 768px) { h1.customfont{font-size: 5.5em } #ascii {font-size: 0.55em;} .starredtext {font-size: 4em;} #info div {font-size: 1.2em;}#finalmessage {font-size: 2.5em;} .infosection {font-size: 1.7em;} div#info {height: 13vh; margin:3.5vh auto 5vh;}}
+@media (max-width: 768px) { h1.customfont{font-size: 4em } #ascii {font-size: 0.55em;} .starredtext {font-size: 4em;} #info div {font-size: 1.2em;}#finalmessage {font-size: 2.5em;} .infosection {font-size: 1.7em;} div#info {height: 13vh; margin:3.5vh auto 5vh;}}
 /*// Small devices (landscape phones, 576px and up)*/
-@media (max-width: 576px) { h1.customfont{font-size: 4em } #asciiwrap {margin-top: 4vh} #ascii {font-size: 0.37em;} .starredtext {font-size: 3em; height: 0.3vh; margin-bottom: 5vh} #info div {font-size: 1em;}#finalmessage {font-size: 1.7em;} .infosection {font-size: 1.3em;} div#info {height: 8vh; margin: 2vh auto 2vh;}}
+@media (max-width: 576px) { h1.customfont{font-size: 2.5em } #asciiwrap {margin-top: 4vh} #ascii {font-size: 0.37em;} .starredtext {font-size: 3em; height: 0.3vh; margin-bottom: 5vh} #info div {font-size: 1em;}#finalmessage {font-size: 1.7em;} .infosection {font-size: 1.3em;} div#info {height: 8vh; margin: 2vh auto 2vh;}}
 
 
 
