--- a/css/hangmanstyles.css
+++ b/css/hangmanstyles.css
@@ -147,6 +147,35 @@ body {
 	/*margin-top: 1vh;*/
 }
 
+#mainsection > h1.starredtext span {
+	margin-top: auto;
+	margin-bottom: auto;
+}
+
+.newstarredelement {
+	display:flex;
+	text-align: center;
+	justify-content: center;
+	padding: 2.5vh 0;
+	font-weight: 800;
+	text-transform: uppercase;
+	letter-spacing: 0.3em;
+	color: #999999;
+	font-size: 4.2em;
+	height: 1.15em;
+	min-height: 100px;
+	/*font-size: 3.8em;*/
+
+	/*margin-top: 1vh;*/
+}
+
+.newstarredelement .word {
+	display: inline-block;
+	line-height: 1em;
+	margin-left: 1%;
+	margin-right: 1%;
+}
+
 .starredtext .text-wrapper {
   position: relative;
   display: inline-block;
@@ -203,6 +232,12 @@ body {
 	margin-left: 12%;
 }
 
+#mainsection > h1.newstarredelement span {
+	/*color: green;*/
+	margin-top:auto;
+	margin-bottom: auto;
+}
+
 
 
 
@@ -212,11 +247,11 @@ body {
 /*// Extra large devices (large desktops, 1200px and up)*/
 @media (max-width: 1200px) { h1.customfont{font-size: 4.5em} }
 /*// Large devices (desktops, 992px and up)*/
-@media (max-width: 992px) { h1.customfont{font-size: 4.5em } #ascii {font-size: 0.75em;} .starredtext {font-size: 3.2em;} #info div {font-size: 1.4em;} #finalmessage {font-size: 3em;} .infosection {font-size: 2.3em;} div#info {height: 13vh; margin:3.5vh auto 5vh;}}
+@media (max-width: 992px) { h1.customfont{font-size: 4.5em } #ascii {font-size: 0.75em;} .starredtext {font-size: 3.2em;} .newstarredelement {font-size: 3.2em;} #info div {font-size: 1.4em;} #finalmessage {font-size: 3em;} .infosection {font-size: 2.3em;} div#info {height: 13vh; margin:3.5vh auto 5vh;}}
 /*// Medium devices (tablets, 768px and up)*/
-@media (max-width: 768px) { h1.customfont{font-size: 4em } #ascii {font-size: 0.55em;} .starredtext {font-size: 2.3em;} #info div {font-size: 1.2em;}#finalmessage {font-size: 2.5em;} .infosection {font-size: 1.7em;} div#info {height: 13vh; margin:3.5vh auto 5vh;}}
+@media (max-width: 768px) { h1.customfont{font-size: 4em } #ascii {font-size: 0.55em;} .starredtext {font-size: 2.3em;} .newstarredelement {font-size: 2.3em;} #info div {font-size: 1.2em;}#finalmessage {font-size: 2.5em;} .infosection {font-size: 1.7em;} div#info {height: 13vh; margin:3.5vh auto 5vh;}}
 /*// Small devices (landscape phones, 576px and up)*/
-@media (max-width: 576px) { h1.customfont{font-size: 2.5em } #asciiwrap {margin-top: 4vh} #ascii {font-size: 0.37em;} .starredtext {font-size: 1.6em; height: 0.3vh; margin-bottom: 5vh} #info div {font-size: 1em;}#finalmessage {font-size: 1.7em;} .infosection {font-size: 1.3em;} div#info {height: 8vh; margin: 2vh auto 2vh;}}
+@media (max-width: 576px) { h1.customfont{font-size: 2.5em } #asciiwrap {margin-top: 4vh} #ascii {font-size: 0.37em;} .starredtext {font-size: 1.6em; height: 0.3vh;  margin-bottom: 5vh} .newstarredelement {font-size: 1.6em;} #info div {font-size: 1em;}#finalmessage {font-size: 1.7em;} .infosection {font-size: 1.3em;} div#info {height: 8vh; margin: 2vh auto 2vh;}}
 
 
 
